tests/ui/definition/fail_default_method.rs
#[obce::definition]
pub trait Trait {
    fn default_method() -> u32 {
        123
    }
}

fn main() {}
